--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flare_flutter: any
   flutter_svg: ^2.0.0+1
+  google_fonts: ^4.0.3
 
 
 dev_dependencies:
