--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flare_flutter: any
   flutter_svg: ^2.0.0+1
   google_fonts: ^4.0.3
+  date_formatter: ^0.0.4
+  intl: ^0.18.0
 
 
 dev_dependencies:
